uploaded profile image and edited image path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="card">
             <div class="top-container">
-                    <img class="avatar" src="images/Profile.jpg">
+                    <img class="avatar" src="Profile.jpg">
                 <div class="role-location">
                     <h4>UX/UI Designer</h4>
                     <p>Aachen, Germany</p>
